221048:	Lint should warn about using internal/unsupported library APIs
Adds support for the RestrictTo annotation.

The RestrictTo annotation offers 3 new types of checks:
- Enforcing that an API is only accessed from within the same
  group of libraries (e.g. support library)
- Enforcing that an API is only accessed from tests
- Enforcing that an API is only called from subclasses

This also required some fixes to the ECJ bridge arround annotation and
package lookup.

Change-Id: I9fa10e01db88589d8a86ce8e0980a7dd0461a65b